--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "devfolio",
   "version": "0.1.0",
+  "homepage":"https://devprofile.co",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
